--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^5.10.6",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "react-awesome-slider": "^4.1.0",
     "react-slideshow-image": "^3.7.5"
   },
   "devDependencies": {
